# route53-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  constraints.txt  pyproject.toml
.github/: settings.yml
.github/workflows/: build-docker.yml  lint.yml  python-tests.yml  repo-manager.yml
scripts/: generate_crds_yaml.py  run_local_operator.sh
src/route53_operator/: __init__.py  __main__.py
src/route53_operator/crds/: __init__.py  _base.py  a.py  cname.py  txt.py
src/route53_operator/crud/: __init__.py  _base.py  a.py  cname.py  txt.py
src/route53_operator/exceptions/: __init__.py
src/route53_operator/handlers/: __init__.py  login.py  startup.py
src/route53_operator/handlers/v1/: __init__.py  a.py
src/route53_operator/lib/: aws.py  config.py  partial.py
src/route53_operator/schemas/: _base.py
src/route53_operator/schemas/v1/: __init__.py  _base.py  a_record.py  cname_record.py  txt_record.py
tests/: conftest.py  mock_server.py  moto_server.py  test_crd.py
tests/unit/: test_crud.py
