[tool.poetry]
name = "route53_operator"
version = "0.1.0"
description = "A K8S operator using KOPF to manage route53 records"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>", "Dylan Page <>", "Chris Blake <>"]
license = "MIT"
readme = "README.md"
packages = [{include = "route53_operator", from= "src"}]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/route53-operator/releases"

[tool.poetry.dependencies]
python = "^3.10"
kopf = "^1.36.0"
aiobotocore = "^2.4.2"
pykube-ng = "^22.9.0"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.3.5"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
pre-commit = ">=2.12.1"
flake8 = "^5.0.0"
black = ">=21.10b0"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.2"
mypy = "^0.982"
pre-commit-hooks = "^4.4.0"
pyupgrade = "^2.38.0"
pytest-cov = "^3.0.0"
pytest_async = "^0.1.1"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.7.0"
pytest-xdist = "^2.5.0"
tox = "^3.28.0"
pylint = "^2.15.8"
bandit = "^1.7.4"
pytest-kind = "^22.11.1"
localstack = "^1.3.1"
awscli-local = "^0.20"

[tool.poetry.scripts]
r53operator = "route53_operator.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude= "tests/ examples/*"

[tool.pytest.ini_options]
addopts = "-n auto --ignore examples --cov=src/route53_operator --cov-report=term-missing"
