[tool.poetry]
name = "route53_operator"
version = "0.1.0"
description = "A K8S operator using KOPF to manage route53 records"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>", "Dylan Page <>", "Chris Blake <>"]
license = "MIT"
readme = "README.md"
packages = [{include = "route53_operator", from= "src"}]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/route53-operator/releases"

[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.36.1"
aiobotocore = "^2.5.0"
pykube-ng = "^22.9.0"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^2.3.5"
xdoctest = {extras = ["colors"], version = "^1.1.1"}
pre-commit = ">=2.12.1"
pep8-naming = "^0.13.3"
mypy = "^1.3"
pre-commit-hooks = "^4.4.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.7.0"
pytest-xdist = "^3.3.1"
bandit = "^1.7.5"
pytest-kind = "^22.11.1"
localstack = "^2.0.2"
awscli-local = "^0.20"
moto = {extras = ["server","s3","sqs","lambda","dynamodb","cloudformation", "sns", "batch", "ec2", "rds"],version = "~=4.1.6"}
ruff = "^0.0.271"
docker = "^6.1.2"

[tool.poetry.scripts]
r53operator = "route53_operator.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude= "tests/ examples/*"

[tool.pytest.ini_options]
addopts = "-n auto --ignore examples --cov=src/route53_operator --cov-report=term-missing --cov-report xml:.coverage.xml"


[tool.ruff]
line-length = 120
target-version = "py311"
